Add sofa repo to list to process

--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,7 @@
   "includeForks": false,
   "repositories": [
     "joelnb/presentation-builder",
-    "joelnb/renovate-config"
+    "joelnb/renovate-config",
+    "joelnb/sofa"
   ]
 }
