Add another new repo

--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,7 @@
   "includeForks": false,
   "repositories": [
     "joelnb/dockerfiles",
+    "joelnb/example-caddy-build-server",
     "joelnb/presentation-builder",
     "joelnb/renovate-config",
     "joelnb/sofa",
