--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
   "platform": "github",
   "includeForks": false,
   "repositories": [
+    "joelnb/ansible-msmtp",
     "joelnb/dockerfiles",
     "joelnb/example-caddy-build-server",
     "joelnb/presentation-builder",
