--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,7 @@
     "joelnb/presentation-builder",
     "joelnb/renovate-config",
     "joelnb/sofa",
+    "joelnb/win-pyxs",
     "joelnb/xenstore-go"
   ]
 }
