Attempt to use renovate to keep k8s config up-to-date

--- a/renovate.json
+++ b/renovate.json
@@ -11,6 +11,7 @@
     "joelnb/ansible-msmtp",
     "joelnb/dockerfiles",
     "joelnb/example-caddy-build-server",
+    "joelnb/flux-config",
     "joelnb/presentation-builder",
     "joelnb/renovate-config",
     "joelnb/sofa",
