Also watch my caddy-ansible repo

--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,7 @@
   "includeForks": false,
   "repositories": [
     "joelnb/ansible-msmtp",
+    "joelnb/caddy-ansible",
     "joelnb/dockerfiles",
     "joelnb/example-caddy-build-server",
     "joelnb/flux-config",
