--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": ["config:base"],
   "assignees": ["joelnb"],
   "branchPrefix": "renovate/",
   "username": "renovate-bot",
