--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/checkout@v3.2.0
       - name: Renovate
         uses: renovatebot/github-action@v34.67.0
+        env:
+          LOG_LEVEL: debug
         with:
           configurationFile: renovate.json
           token: ${{ secrets.RENOVATE_TOKEN }}
