--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,7 @@
   "gitAuthor": "Renovate Bot <bot@renovateapp.com>",
   "onboarding": true,
   "platform": "github",
-  "includeForks": false,
+  "forkProcessing": "disabled",
   "repositories": [
     "joelnb/ansible-msmtp",
     "joelnb/dockerfiles",
