Update extends info

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["default.json"],
+  "extends": ["github>joelnb/renovate-config"],
   "repositories": [
     "joelnb/ansible-msmtp",
     "joelnb/dockerfiles",
