--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
     "joelnb/dockerfiles",
     "joelnb/example-caddy-build-server",
     "joelnb/flux-config",
+    "joelnb/nixos-config",
     "joelnb/presentation-builder",
     "joelnb/renovate-config",
     "joelnb/sofa",
